<resources>
    <string name="app_name">LucaHome</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="error_invalid_password">This password is not valid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="save">Save</string>
    <string name="prompt_birthday_name">Birthday name</string>
    <string name="prompt_birthday_group">Birthday group</string>
    <string name="birthday_remind_me">Remind me about this birthday</string>
    <string name="error_field_invalid_date">This date is not valid</string>
    <string name="error_nothing_changed">Nothing changed</string>
    <string name="prompt_coin_user">User</string>
    <string name="prompt_coin_type">Coin type</string>
    <string name="prompt_coin_amount">Coin amount</string>
    <string name="prompt_menu_title">Menu title</string>
    <string name="prompt_menu_description">Menu description</string>
    <string name="prompt_meterdata_type">Meter type</string>
    <string name="prompt_meterdata_meterid">Meter ID</string>
    <string name="prompt_meterdata_area">Meter area</string>
    <string name="prompt_meterdata_imagename">Meter image name</string>
    <string name="prompt_meterdata_value">Meter value</string>
    <string name="prompt_moneymeterdata_bank">Bank</string>
    <string name="prompt_moneymeterdata_plan">Plan</string>
    <string name="prompt_moneymeterdata_amount">Amount</string>
    <string name="prompt_moneymeterdata_unit">Unit</string>
    <string name="prompt_movie_title">Movie title</string>
    <string name="prompt_movie_genre">Movie genre</string>
    <string name="prompt_movie_description">Movie description</string>
    <string name="prompt_puckjs_name">PuckJs name</string>
    <string name="prompt_puckjs_area">PuckJs area</string>
    <string name="prompt_puckjs_mac">PuckJs mac</string>
    <string name="prompt_socket_name">Socket name</string>
    <string name="prompt_socket_area">Socket area</string>
    <string name="prompt_socket_code">Socket code</string>
    <string name="prompt_shopping_name">Shopping name</string>
    <string name="prompt_shopping_quantity">Shopping quantity</string>
    <string name="prompt_shopping_unit">Shopping unit</string>
    <string name="prompt_schedule_name">Schedule name</string>
    <string name="prompt_timer_name">Timer name</string>
    <string name="prompt_switch_name">Switch name</string>
    <string name="prompt_switch_area">Switch area</string>
    <string name="prompt_switch_remote_id">Switch remote id</string>
    <string name="prompt_switch_keycode">Switch keycode</string>
    <string name="search">Search</string>
    <string name="searchYoutube">Search youtube</string>
    <string name="promptEnterSearch">Enter your search below</string>
    <string name="play">Play</string>
    <string name="select_youtube_id">Select youtube id</string>
    <string name="contentDescription">This is an image</string>
    <string name="noData">There is no data!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cameraNotActive">Camera is not active</string>
    <string name="activateCamera">Activate camera</string>
    <string name="activateMotionControl">Activate motion control</string>
    <string name="socketEnabled">Enabled</string>
    <string name="socketDisabled">Disabled</string>
    <string name="youtube_id_example">YoutubeId: </string>
    <string name="volume_example">Vol.: 15</string>
    <string name="brightness_example">Brightness: 85%</string>
    <string name="battery_example">Battery: 25%</string>
    <string name="media_mirror_version_example">Version: v0.20.0.170829</string>
    <string name="youtube_play_time_example">00:00:00 / 99:99:99</string>
    <string name="sleep_timer_example">Sleep timer: 00:00min</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update_current_weather">Update current weather</string>
    <string name="update_forecast_weather">Update forecast weather</string>
    <string name="update_temperature">Update temperature</string>
    <string name="update_ip">Update ip</string>
    <string name="update_birthdays">Update birthdays</string>
    <string name="update_calendar">Update calendar</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="pref_header_user">User</string>
    <string name="pref_title_user_name">User name</string>
    <string name="pref_title_enter_user_name">Enter user</string>
    <string name="pref_title_user_passphrase">User passphrase</string>
    <string name="pref_title_enter_user_passphrase">Enter passphrase</string>
    <string name="pref_header_network">Network</string>
    <string name="pref_title_ssid">SSID</string>
    <string name="pref_title_enter_ssid">Enter SSID</string>
    <string name="pref_title_ip">IP</string>
    <string name="pref_title_enter_ip">Enter IP</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications">Activate/Deactivate notifications</string>
    <string name="pref_title_notification_sockets">Display socket notification</string>
    <string name="pref_title_notification_wireless_switches">Display wireless switches notification</string>
    <string name="pref_title_notification_birthday">Display birthday notification</string>
    <string name="pref_title_notification_current_weather">Display current weather notification</string>
    <string name="pref_title_notification_forecast_weather">Display forecast weather notification</string>
    <string name="pref_title_notification_temperature">Display temperature notification</string>
    <string name="pref_title_notification_camera">Display notification whenever camera is active</string>
    <string name="pref_title_notification_coins">Display notification whenever coins are updated</string>
    <string name="pref_header_reload_data">Reload Data</string>
    <string name="pref_title_reload_data">Activate/Deactivate reloading data</string>
    <string name="pref_title_reload_birthday">Reload birthday data</string>
    <string name="pref_title_reload_birthday_timeout">Enter birthday reload timeout in min</string>
    <string name="pref_title_reload_coin">Reload coin data</string>
    <string name="pref_title_reload_coin_timeout">Enter coin reload timeout in min</string>
    <string name="pref_title_reload_mapcontent">Reload mapcontent data</string>
    <string name="pref_title_reload_mapcontent_timeout">Enter mapcontent reload timeout in min</string>
    <string name="pref_title_reload_mediaserver">Reload mediaserver data</string>
    <string name="pref_title_reload_mediaserver_timeout">Enter mediaserver reload timeout in min</string>
    <string name="pref_title_reload_menu">Reload menu data</string>
    <string name="pref_title_reload_menu_timeout">Enter menu reload timeout in min</string>
    <string name="pref_title_reload_meter_data">Reload meter data</string>
    <string name="pref_title_reload_meter_data_timeout">Enter meter data reload timeout in min</string>
    <string name="pref_title_reload_money_meter_data">Reload money meter data</string>
    <string name="pref_title_reload_money_meter_data_timeout">Enter money meter data reload timeout in min</string>
    <string name="pref_title_reload_movie">Reload movie data</string>
    <string name="pref_title_reload_movie_timeout">Enter movie reload timeout in min</string>
    <string name="pref_title_reload_puckjs">Reload puckjs data</string>
    <string name="pref_title_reload_puckjs_timeout">Enter puckjs reload timeout in min</string>
    <string name="pref_title_reload_schedule">Reload schedule data</string>
    <string name="pref_title_reload_schedule_timeout">Enter schedule reload timeout in min</string>
    <string name="pref_title_reload_security">Reload security data</string>
    <string name="pref_title_reload_security_timeout">Enter security reload timeout in min</string>
    <string name="pref_title_reload_shopping">Reload shopping data</string>
    <string name="pref_title_reload_shopping_timeout">Enter shopping reload timeout in min</string>
    <string name="pref_title_reload_temperature">Reload temperature data</string>
    <string name="pref_title_reload_temperature_timeout">Enter temperature reload timeout in min</string>
    <string name="pref_title_reload_weather">Reload weather data</string>
    <string name="pref_title_reload_weather_timeout">Enter weather reload timeout in min</string>
    <string name="pref_title_reload_wireless_socket">Reload wireless socket data</string>
    <string name="pref_title_reload_wireless_socket_timeout">Enter wireless socket reload timeout in min</string>
    <string name="pref_title_reload_wireless_switch">Reload wireless switch data</string>
    <string name="pref_title_reload_wireless_switch_timeout">Enter wireless switch reload timeout in min</string>
    <string name="pref_title_handle_bluetooth_automatically">Let the app manage bluetooth?</string>
    <string name="pref_title_beacons_scan_enabled">Activate/Deactivate scan for beacons</string>
    <string name="pref_title_time_between_scans_sec">Enter time between scans in sec</string>
    <string name="pref_title_time_scans_msec">Enter time of scans in msec</string>
    <string name="pref_header_open_weather">Open Weather</string>
    <string name="pref_title_open_weather_city">City</string>
    <string name="pref_title_enter_open_weather_city">Enter City</string>
    <string name="pref_title_change_weather_wallpaper">Change wallpaper</string>
    <string name="pref_header_wireless_socket">Wireless socket</string>
    <string name="pref_header_wireless_switch">Wireless switch</string>
    <string name="pref_header_coins">Coins</string>
    <string name="pref_title_enter_coin_hour_trend">Enter hours for trend</string>
    <string name="pref_header_positioning">Positioning</string>
    <string name="pref_header_bixby_actions">Bixby actions</string>
    <string name="title_activity_wireless_socket">Wireless Sockets</string>
    <string name="title_activity_wireless_socket_edit">Edit Wireless Sockets</string>
    <string name="title_activity_wireless_switch">Wireless Switches</string>
    <string name="title_activity_wireless_switch_edit">Edit Wireless Switches</string>
    <string name="title_activity_schedule">Schedules</string>
    <string name="title_activity_schedule_edit">Edit Schedules</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_timer_edit">Edit Timer</string>
    <string name="title_activity_bixby">Bixby</string>
    <string name="title_activity_bixby_edit">Edit Bixby</string>
    <string name="title_activity_birthday">Birthdays</string>
    <string name="title_activity_birthday_edit">Edit Birthday</string>
    <string name="title_activity_coin">Coins</string>
    <string name="title_activity_coin_edit">Edit Coins</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_edit">Edit Menu</string>
    <string name="title_activity_meter_data">Meter data</string>
    <string name="title_activity_meter_data_edit">Edit meter data</string>
    <string name="title_activity_money_meter_data">Money meter data</string>
    <string name="title_activity_money_meter_data_edit">Edit money meter data</string>
    <string name="title_activity_movie">Movies</string>
    <string name="title_activity_movie_edit">Edit Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_details">Details</string>
    <string name="action_bixby">Bixby</string>
</resources>