<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="reload_data_enabled"
        android:title="@string/pref_title_reload_data" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_birthday_enabled"
        android:title="@string/pref_title_reload_birthday" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_coin_timeout_min"
        android:dependency="reload_birthday_enabled"
        android:inputType="numberDecimal"
        android:key="reload_birthday_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_birthday_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_coin_enabled"
        android:title="@string/pref_title_reload_coin" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_coin_timeout_min"
        android:dependency="reload_coin_enabled"
        android:inputType="numberDecimal"
        android:key="reload_coin_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_coin_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_mapcontent_enabled"
        android:title="@string/pref_title_reload_mapcontent" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_mapcontent_timeout_min"
        android:dependency="reload_mapcontent_enabled"
        android:inputType="numberDecimal"
        android:key="reload_mapcontent_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_mapcontent_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_mediamirror_enabled"
        android:title="@string/pref_title_reload_mediamirror" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_mediamirror_timeout_min"
        android:dependency="reload_mediamirror_enabled"
        android:inputType="numberDecimal"
        android:key="reload_mediamirror_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_mediamirror_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_menu_enabled"
        android:title="@string/pref_title_reload_menu" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_menu_timeout_min"
        android:dependency="reload_menu_enabled"
        android:inputType="numberDecimal"
        android:key="reload_menu_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_menu_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_meter_data_enabled"
        android:title="@string/pref_title_reload_meter_data" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_meter_data_timeout_min"
        android:dependency="reload_meter_data_enabled"
        android:inputType="numberDecimal"
        android:key="reload_meter_data_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_meter_data_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_money_meter_data_enabled"
        android:title="@string/pref_title_reload_money_meter_data" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_money_meter_data_timeout_min"
        android:dependency="reload_money_meter_data_enabled"
        android:inputType="numberDecimal"
        android:key="reload_money_meter_data_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_money_meter_data_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_movie_enabled"
        android:title="@string/pref_title_reload_movie" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_movie_timeout_min"
        android:dependency="reload_movie_enabled"
        android:inputType="numberDecimal"
        android:key="reload_movie_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_movie_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_puckjs_enabled"
        android:title="@string/pref_title_reload_movie" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_puckjs_timeout_min"
        android:dependency="reload_puckjs_enabled"
        android:inputType="numberDecimal"
        android:key="reload_puckjs_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_puckjs_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_schedule_enabled"
        android:title="@string/pref_title_reload_schedule" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_schedule_timeout_min"
        android:dependency="reload_schedule_enabled"
        android:inputType="numberDecimal"
        android:key="reload_schedule_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_schedule_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_security_enabled"
        android:title="@string/pref_title_reload_security" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_security_timeout_min"
        android:dependency="reload_security_enabled"
        android:inputType="numberDecimal"
        android:key="reload_security_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_security_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_shopping_enabled"
        android:title="@string/pref_title_reload_shopping" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_shopping_timeout_min"
        android:dependency="reload_shopping_enabled"
        android:inputType="numberDecimal"
        android:key="reload_shopping_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_shopping_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_temperature_enabled"
        android:title="@string/pref_title_reload_temperature" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_temperature_timeout_min"
        android:dependency="reload_temperature_enabled"
        android:inputType="numberDecimal"
        android:key="reload_temperature_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_temperature_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_weather_enabled"
        android:title="@string/pref_title_reload_weather" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_weather_timeout_min"
        android:dependency="reload_weather_enabled"
        android:inputType="numberDecimal"
        android:key="reload_weather_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_weather_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_wirelesssocket_enabled"
        android:title="@string/pref_title_reload_wireless_socket" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_wireless_socket_timeout_min"
        android:dependency="reload_wirelesssocket_enabled"
        android:inputType="numberDecimal"
        android:key="reload_wirelesssocket_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_wireless_socket_timeout" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="reload_data_enabled"
        android:key="reload_wirelessswitch_enabled"
        android:title="@string/pref_title_reload_wireless_switch" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_default_wireless_switch_timeout_min"
        android:dependency="reload_wirelessswitch_enabled"
        android:inputType="numberDecimal"
        android:key="reload_wirelessswitch_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_reload_wireless_switch_timeout" />

</PreferenceScreen>
