<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_message"
        android:title="@string/pref_title_notifications" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_message"
        android:key="notifications_message_sockets"
        android:title="@string/pref_title_notification_sockets" />

    <!-- NOTE: This preference will be enabled only when the top checkbox is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_message"
        android:key="notifications_message_birthday"
        android:title="@string/pref_title_notification_birthday" />

    <!-- NOTE: This preference will be enabled only when the top checkbox is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_message"
        android:key="notifications_message_current_weather"
        android:title="@string/pref_title_notification_current_weather" />

    <!-- NOTE: This preference will be enabled only when the top checkbox is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_message"
        android:key="notifications_message_forecast_weather"
        android:title="@string/pref_title_notification_forecast_weather" />

    <!-- NOTE: This preference will be enabled only when the top checkbox is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_message"
        android:key="notifications_message_temperature"
        android:title="@string/pref_title_notification_temperature" />

</PreferenceScreen>
