<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="@color/colorAccent">
    <item
        android:id="@+id/bottomNavigationBixby"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/action_bixby" />
    <item
        android:id="@+id/bottomNavigationSettings"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/bottomNavigationDetails"
        android:color="@color/colorPrimary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_details" />
</menu>