<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_start_color"
    android:paddingBottom="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/select_youtube_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/PrimaryText"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/dialog_enter_youtube_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="@xml/button_blank"
                    android:contentDescription="@string/contentDescription"
                    android:src="@android:drawable/ic_menu_search" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/dialog_enter_youtube_id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/PrimaryText" />

            <Spinner
                android:id="@+id/dialog_select_youtube_predefined_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/dialog_select_youtube_played_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/dialog_select_youtube_play_on_all_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_video_on_all_mirror"
                android:textColor="@color/PrimaryText" />

            <com.rey.material.widget.Button
                android:id="@+id/dialog_select_youtube_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@xml/button_blank_white"
                android:text="@string/play"
                android:textColor="@color/PrimaryText"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>